--- a/sass/framework/_wellejus.labels.scss
+++ b/sass/framework/_wellejus.labels.scss
@@ -5,7 +5,8 @@
  */
 
 
-#w .label {
+#w .label,
+#w .news-label {
   background-color: transparent;
   text-shadow: none;
   padding: 0 10px 0 0;
