--- a/sass/module/_wellejus.event.scss
+++ b/sass/module/_wellejus.event.scss
@@ -100,6 +100,17 @@
   }
 }
 
+.frontpage-layout {
+  .pane-vejlebib-ding-event-vejlebib-ding-event-list .pane-title {
+    background: $black;
+    color: $white;
+    font-size: 1em;
+    padding: 0.2em 0.5em;
+    text-transform: uppercase;
+  }
+}
+
+
 /* Event
    ========================================================================== */
 
