--- a/sass/module/_wellejus.search.scss
+++ b/sass/module/_wellejus.search.scss
@@ -199,7 +199,7 @@
 #w .ting-object {
 
   .subject {
-    background-color: $white;
+    background-color: transparent;
     text-shadow: none;
     padding: 0;
   }
